fixed bug with white space header search

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -370,9 +370,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
   list-style: none;
-  margin-right: 84px;
-  margin: 0 73px 0 0;
-  padding: 0; }
+  margin: 0;
+  padding: 0;
+  margin-right: 84px; }
   @media screen and (max-width: 1024px) {
     .search__list {
       margin-right: 15px; } }
@@ -428,7 +428,8 @@ body {
   display: block;
   color: #fff;
   font-size: 0.813rem;
-  font-weight: 400; }
+  font-weight: 400;
+  white-space: nowrap; }
   @media screen and (max-width: 768px) {
     .search__link {
       text-transform: uppercase;
