--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -148,9 +148,10 @@
     // justify-content: flex-end;
     @include flex-row;
     list-style: none;
-    margin-right: 99px - 15px;
-    margin: 0 73px 0 0;
+    
+    margin: 0;
     padding: 0;
+    margin-right: 99px - 15px;
      @media screen and (max-width: 1024px) {
          margin-right: 15px;
        
@@ -200,6 +201,7 @@
     color: #fff;
     font-size: 0.813rem;
     font-weight: 400;
+    white-space: nowrap;
       @media screen and (max-width: 768px) {
             text-transform: uppercase;
              font-size: 1.5rem;
